<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="title_property_list">Property List</string>
    <string name="title_properties_map">Properties Map</string>
    <string name="title_property_detail">Property Detail</string>
    <string name="real_estate_manager">Real Estate Manager</string>
    <string name="connection_succeed">Connection succeed</string>
    <string name="error_no_internet">No Internet</string>
    <string name="error_unknown_error">Unknown error</string>
    <string name="price">Price</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="more">More</string>
    <string name="add_property_button">Add property button</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="select_a_property_type">Select property type</string>
    <string name="property_type">Type</string>
    <string name="address">Address</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="description">Description</string>
    <string name="united_state">United State</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zipcode">Zipcode</string>
    <string name="characteristics">Characteristics</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathroom">Bathroom</string>
    <string name="rooms">Rooms</string>
    <string name="surface">Surface sq m</string>
    <string name="park">Park</string>
    <string name="hospital">Hospital</string>
    <string name="shops">Shop</string>
    <string name="schools">School</string>
    <string name="museum">Museum</string>
    <string name="station">Station</string>
    <string name="phone_upload">Phone upload</string>
    <string name="camera_upload">Camera upload</string>
    <string name="upload_video">Upload video</string>
    <string name="upload_photo">Add picture</string>
    <string name="property_picture">Property picture</string>
    <string name="delete_icon">Delete icon</string>
    <string name="enter_media_title">Enter Media title</string>
    <string name="on_market_since">On market since</string>
    <string name="sold_since">Sold since</string>
    <string name="sold_date">Sold date</string>
    <string name="sold">Sold</string>
    <string name="area">Area</string>
    <string name="property_image_view">Property Image View</string>
    <string name="address2_layout">%1$s, %2$s, %3$s, %4$s</string>
    <plurals name="room_plural">
        <item quantity="one">1 room</item>
        <item quantity="other">%d rooms</item>
    </plurals>
    <plurals name="bedrooms_plural">
        <item quantity="one">1 bed</item>
        <item quantity="other">%d beds</item>
    </plurals>
    <plurals name="bathrooms_plural">
        <item quantity="one">1 bath</item>
        <item quantity="other">%d baths</item>
    </plurals>
    <string name="surface_text">%d m²</string>
    <string name="nearby">Nearby</string>
    <string name="location">Localisation: </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_location_permission_explanation">You need to enable permission in order to use the app. The app will display properties around you.</string>
    <string name="user_location_permission_not_granted">Location permission is not granted</string>
    <string name="search_an_address">Search an address</string>
    <string name="engine_init_error">Init error</string>
    <string name="file_provider_name">.fileprovider</string>
    <string name="select_capture_image"><![CDATA[Please select or capture image]]></string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="some_err">some error</string>
    <string name="agent_picture">AgentPicture</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="empty_agent_message">Agents cannot be empty</string>
    <string name="empty_property_message">Properties cannot be empty</string>
    <string name="empty_loan_message">Loan fields cannot be empty</string>
    <string name="phone">Phone</string>
    <string name="agent_in_charge">Agent in Charge</string>
    <string name="select_agent_in_charge">Select agent in charge</string>
    <string name="dates">Dates</string>
    <string name="agent">Agent:</string>
    <string name="logo_image">Logo image</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date_on_market_asc">Sort by date on market ASC</string>
    <string name="sort_by_date_on_market_dsc">Sort by date on market DESC</string>
    <string name="edit_property">Edit property</string>
    <string name="filtered">Filtered</string>
    <string name="filters">Filters:</string>
    <string name="house">House</string>
    <string name="flat">Flat</string>
    <string name="duplex">Duplex</string>
    <string name="penthouse">Penthouse</string>
    <string name="manor">Manor</string>
    <string name="all">All</string>
    <string name="apply">Apply</string>
    <string name="empty_property_message2">Property cannot be empty</string>
    <string name="select_an_area">Select an area</string>
    <string name="reset">Reset</string>
    <string name="loft">Loft</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="close">Close</string>
    <string name="number_of_pics">Number of pictures</string>
    <string name="property_add">Property add</string>
    <string name="fab_add">Fab add</string>
    <string name="sort_by_price_dsc">Sort By Price DSC</string>
    <string name="sort_by_price_asc">Sort by price ASC</string>
    <string name="currency_choose">Choose currency</string>
    <string name="down_payment">Down Payment</string>
    <string name="property_price">Property price</string>
    <string name="interest_rate">Interest rate in %</string>
    <string name="loan_term">Loan term in year</string>
    <string name="loanResult">Your mortgage payments over %1$s years will add up to %2$s. Estimated monthly payment: %3$s</string>
    <string name="calculate_loan">Simulate loan</string>
    <string name="no_property_yet">Nothing to show.</string>
    <string name="add_a_new_agent">Add a new agent</string>
    <string name="add_a_new_property">Add a new property</string>
    <string name="add_button">Add button</string>
    <string name="enable_gps">PLease enable GPS</string>
    <string name="required_for_this_app">GPS is requiered for this app.</string>
    <string name="enable_now">Enable now</string>
</resources>
