<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_currency"
        android:icon="@drawable/ic_attach_dollars_24dp"
        android:title="@string/currency_choose"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_loan"
        android:icon="@drawable/ic_baseline_account_balance_24"
        android:title="@string/calculate_loan"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/sort"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <item
                android:id="@+id/action_sort_by_price_asc"
                android:title="@string/sort_by_price_asc" />
            <item
                android:id="@+id/action_sort_by_price_dsc"
                android:title="@string/sort_by_price_dsc" />
            <item
                android:id="@+id/action_sort_by_date_on_market_asc"
                android:title="@string/sort_by_date_on_market_asc" />
            <item
                android:id="@+id/action_sort_by_date_on_market_dsc"
                android:title="@string/sort_by_date_on_market_dsc" />
        </menu>
    </item>
    <item
        android:id="@+id/action_filter_properties"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filtered"
        app:showAsAction="ifRoom" />
</menu>
