<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


        <variable
            name="viewModel"
            type="com.openclassrooms.realestatemanager.presentation.ui.addProperty.AddEditPropertyViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/station"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/station"
            android:checked="@={viewModel.stations}"
            app:layout_constraintStart_toStartOf="@+id/schools"
            app:layout_constraintTop_toBottomOf="@+id/schools" />

        <CheckBox
            android:id="@+id/museum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/museum"
            android:checked="@={viewModel.museum}"
            app:layout_constraintEnd_toStartOf="@+id/schools"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/schools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schools"
            android:checked="@={viewModel.schools}"
            app:layout_constraintEnd_toStartOf="@+id/shops"
            app:layout_constraintStart_toEndOf="@+id/museum"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/shops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/shops"
            android:checked="@={viewModel.shops}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/schools"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/parcs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.park}"
            android:text="@string/park"
            app:layout_constraintStart_toStartOf="@+id/shops"
            app:layout_constraintTop_toBottomOf="@+id/shops" />

        <CheckBox
            android:id="@+id/hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hospital"
            android:checked="@={viewModel.hospital}"
            app:layout_constraintStart_toStartOf="@+id/museum"
            app:layout_constraintTop_toBottomOf="@+id/museum" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
