<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.openclassrooms.realestatemanager.presentation.ui.MainViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/list"
        app:behavior_hideable="true"
        app:behavior_peekHeight="600dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingStart="@dimen/marginStart"
        android:paddingTop="@dimen/list_item_spacing_half"
        android:paddingEnd="@dimen/marginEnd"
        android:paddingBottom="@dimen/list_item_spacing_half"
        tools:context=".presentation.ui.search.PropertySearchDialogFragment"
        tools:listitem="@layout/fragment_property_search_dialog_list_dialog_item">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/typeFilter"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/property_type"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:id="@+id/typeChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:chipSpacingHorizontal="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeFilter">

                <com.google.android.material.chip.Chip
                    android:id="@+id/house"
                    android:checked="@={viewModel.house}"
                    android:onClick="@{(v)->viewModel.filterData()}"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/house" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/flat"
                    android:checked="@={viewModel.flat}"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flat" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/duplex"
                    android:checked="@={viewModel.duplex}"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duplex" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/penthouse"
                    android:checked="@={viewModel.penthouse}"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penthouse" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/manor"
                    android:checked="@={viewModel.manor}"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manor" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/nearByFilter"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/nearby"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/typeChipGroup" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/nearbyChipGroup"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:chipSpacingHorizontal="22dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nearByFilter">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMuseum"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.museum}"
                    android:text="@string/museum" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSchool"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.schools}"
                    android:text="@string/schools" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipShop"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.shops}"
                    android:text="@string/shops" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipHospital"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.hospital}"
                    android:text="@string/hospital" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipStation"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={viewModel.stations}"
                    android:text="@string/station" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPark"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.filterData()}"
                    android:checked="@={viewModel.park}"
                    android:text="@string/park" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/priceRangeText"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/price"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nearbyChipGroup" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/priceRangeSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="100000"
                android:valueFrom="@{viewModel.minPrice}"
                android:valueTo="@{viewModel.maxPrice}"
                app:values="@{viewModel.priceArray}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priceRangeText" />

            <TextView
                android:id="@+id/surfaceRangeText"
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/surface"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/priceRangeSlider" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/surfaceRangeSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="10"
                android:valueFrom="0"
                android:valueTo="10000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/surfaceRangeText" />

            <Button
                android:id="@+id/applyFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                app:layout_constraintTop_toBottomOf="@id/surfaceRangeSlider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
